# sss

./: .gitignore  BUILDING-MUSL.md  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.alpine  Dockerfile.rhel8  Dockerfile.rhel9  KNOWN_TEST_FAILURES.md  LICENCE  MACOS_BUILD_SUMMARY.md  MARKER_INFERENCE_PROGRESS.md  README.md  SECURITY.md  THIRD-PARTY-LICENCES.toml  build-macos-cross-fuse-t.sh  build-macos-cross.sh  build-macos.sh  build-on-arm64-linux.sh  build-on-mac.sh  build-rhel8.sh  build-rhel9.sh  build.rs  deny.toml  install.sh  setup-macos-crosscompile.sh  ssse
.cargo/: config.toml
.github/workflows/: build.yml  coverage.yml  release.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-cli-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VERIFICATION.md  1-RESEARCH.md
.planning/phases/02-sss-mode-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-keystore-dual-suite/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/03-sss-mode-complete/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-documentation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/04-migration-command/: 04-01-PLAN.md  04-01-SUMMARY.md  (+2 more)
.planning/research/: FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: fuse_read_latency.rs  marker_inference.rs  marker_processing.rs  project_ops.rs
docs/: BUILDING_STATIC.md  BUILD_FOR_MACOS.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_REVIEW_CATALOG.md  COMPLETION_SUMMARY.md  CRYPTOGRAPHY.md  DEVENV_INSTALLER.md  FUSE_TESTING.md  FUSE_T_DEBUGGING.md  FUSE_T_VS_MACFUSE.md  IGNORE_PATTERNS.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  KEY_MANAGEMENT.md  MACOS_FUSE_T_NOTES.md  MACOS_QUICK_START.md  MARKER_COMPLIANCE.md  MARKER_INFERENCE_IMPLEMENTATION.md  QA_AUDIT_FINDINGS.md  QA_IMPLEMENTATION_SUMMARY.md  SECRETS_FILE_FORMAT.md  SECRETS_PARSING_GUIDE.md  SECURITY.md  TEST_COVERAGE_ANALYSIS.md  architecture.md  configuration.md  marker-design.md  marker-format.md  security-model.md  sss-mode-guide.md  usage-guide.md
docs/tutorials/: 01-getting-started.md  02-team-collaboration.md  03-git-integration.md  04-editor-workflow.md  05-fuse-mounting.md  06-project-configuration.md
emacs/: sss-mode.el
githooks/: post-checkout  post-merge  pre-commit
man/: sss.1  ssse.1
plugins/emacs/: README.md  sss-doom.el  sss-mode.el  sss-project.el  sss-ui.el  sss-utils.el  sss.el
rpm-build/: .gitignore  README.md  build-rpm.sh  sss.spec
scripts/: build-musl-docker.sh  build-musl.sh  build-static-local.sh  build-with-bundled-libsodium.sh  check-coverage.sh  devenv-macos-installer.sh  devenv.sh  git-pull  run-fuse-tests.sh
src/: agent.rs  agent_policy.rs  agent_protocol.rs  aliases.rs  askpass.rs  audit_log.rs  config.rs  config_manager.rs  constants.rs  crypto.rs  editor.rs  error.rs  error_helpers.rs  filesystem_common.rs  fuse_fs.rs  kdf.rs  keyring_manager.rs  keyring_support.rs  keystore.rs  lib.rs  main.rs  merge.rs  ninep_fs.rs  processor.rs  project.rs  rate_limiter.rs  rotation.rs  scanner.rs  secrets.rs  secure_memory.rs  toml_helpers.rs  validation.rs  winfsp_fs.rs
src/commands/: agent.rs  aliases.rs  git.rs  hooks.rs  init.rs  keys.rs  migrate.rs  mod.rs  mount.rs  ninep.rs  process.rs  project.rs  settings.rs  status.rs  users.rs  utils.rs
src/crypto/: classic.rs  hybrid.rs  mod.rs  suite.rs
src/fuse/: file_cache.rs  inode_manager.rs  mod.rs  virtual_fs.rs
src/marker_inference/: README.md  delimiter.rs  diff.rs  error.rs  expander.rs  mapper.rs  marker_syntax.rs  mod.rs  parser.rs  propagator.rs  reconstructor.rs  types.rs  validator.rs
src/processor/: core.rs  marker_parser.rs  mod.rs
tests/: audit_integration_tests.rs  command_error_tests.rs  command_integration.rs  command_username_resolution.rs  configurable_secrets_files.rs  cross_suite_property_test.rs  crypto_properties.rs  crypto_security_tests.rs  crypto_timing_tests.rs  e2e_cli_workflows.rs  editor_integration.rs  error_handling_tests.rs  filesystem_marker_security_tests.rs  fuse_integration.rs  ignore_patterns_cli_integration.rs  ignore_patterns_process_integration.rs  ignore_patterns_tests.rs  init_crypto_flag.rs  integration_config_helpers.rs  integration_qa_refactoring.rs  kdf_security_tests.rs  keys_suite_flag.rs  keystore_integration_tests.rs  keystore_security_tests.rs  marker_inference_tests.rs  marker_parser_proptest.rs  merge_integration_tests.rs  migrate_e2e.rs  multi_key_matching.rs  multi_user_e2e.rs  multi_user_workflows.rs  parser_properties.proptest-regressions  password_strength_tests.rs  process_command_security_tests.rs  processor_edge_cases.rs  rotation_coverage.rs  rotation_security.rs  scanner_coverage.rs  scanner_edge_cases.rs  scanner_integration_tests.rs  (+5 more)
tests/marker_inference/: edge_cases.rs  expander_unit.rs  integration.rs  mod.rs  properties.rs  spec_compliance.rs
vscode/: .vscodeignore  QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: binaryDownloader.ts  constants.ts  extension.ts  gitIntegration.ts  projectManager.ts  sssDecorator.ts  sssFileDecorationProvider.ts  sssFileSystemProvider.ts  sssHoverProvider.ts  sssWrapper.ts  statusBar.ts  treeViews.ts  types.ts  userKeyManager.ts
vscode/syntaxes/: sss-markers.json  sss-secrets.json
(+55 files in other folders)
