[package]
name = "sss"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "sss"
path = "src/main.rs"

[[bin]]
name = "sss-agent"
path = "src/bin/sss-agent.rs"

[[bin]]
name = "sss-askpass-tty"
path = "src/bin/sss-askpass-tty.rs"

[[bin]]
name = "sss-askpass-gui"
path = "src/bin/sss-askpass-gui.rs"

[dependencies]
base64 = "0.22"
toml = "0.8"
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.21.0"
which = "4.4"
libsodium-sys = "0.2"
shell-escape = "0.1"
keyring = "3.2"
zeroize = { version = "1.8", features = ["derive"] }
directories = "5.0"
rpassword = "7.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
subtle = "2.5"
once_cell = "1.20"
dirs = "5.0"
atty = "0.2"
ctrlc = "3.4"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.21.0"
proptest = "1.5"
