[package]
name = "sss"
version = "1.1.1"
edition = "2021"
license = "ISC"
authors = ["Dominic Pearson <dsp@technoanimal.net"]

[features]
default = []
fuse = ["dep:fuser", "dep:parking_lot"]
winfsp = ["dep:winfsp", "dep:parking_lot", "dep:widestring", "dep:winapi"]
ninep = ["dep:rs9p", "dep:tokio", "dep:tokio-stream", "dep:async-trait", "dep:nix", "dep:parking_lot"]

[[bin]]
name = "sss"
path = "src/main.rs"

[[bin]]
name = "sss-agent"
path = "src/bin/sss-agent.rs"

[[bin]]
name = "sss-askpass-tty"
path = "src/bin/sss-askpass-tty.rs"

[[bin]]
name = "sss-askpass-gui"
path = "src/bin/sss-askpass-gui.rs"

[dependencies]
base64 = "0.22"
toml = "0.8"
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.21.0"
which = "4.4"
libsodium-sys = "0.2"
shell-escape = "0.1"
keyring = "3.2"
zeroize = { version = "1.8", features = ["derive"] }
directories = "5.0"
rpassword = "7.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
subtle = "2.5"
once_cell = "1.20"
dirs = "5.0"
atty = "0.2"
ctrlc = "3.4"
serde_json = "1.0"
fuser = { version = "0.14", optional = true }
parking_lot = { version = "0.12", optional = true }
winfsp = { version = "0.12", optional = true }
widestring = { version = "1.1", optional = true }
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winbase", "winnt"], optional = true }
similar = "2.3"
libc = "0.2.177"
rs9p = { package = "rust-9p", path = "vendor/rust-9p", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["fs"], optional = true }
async-trait = { version = "0.1", optional = true }
nix = { version = "0.26", optional = true }

[dev-dependencies]
tempfile = "3.21.0"
proptest = "1.5"
