[package]
name = "sss"
version = "1.3.0"
edition = "2024"
license = "ISC"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]

[features]
default = []
fuse = ["dep:fuser", "dep:parking_lot"]
winfsp = ["dep:winfsp", "dep:parking_lot", "dep:widestring", "dep:winapi"]
ninep = ["dep:rs9p", "dep:tokio", "dep:tokio-stream", "dep:async-trait", "dep:nix", "dep:parking_lot"]
hybrid = ["dep:trelis-hybrid", "dep:trelis-primitives", "dep:blake3"]

[[bin]]
name = "sss"
path = "src/main.rs"

[[bin]]
name = "sss-agent"
path = "src/bin/sss-agent.rs"

[[bin]]
name = "sss-askpass-tty"
path = "src/bin/sss-askpass-tty.rs"

[[bin]]
name = "sss-askpass-gui"
path = "src/bin/sss-askpass-gui.rs"

[dependencies]
base64 = "0.22"
toml = "0.8"
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.21.0"
which = "4.4"
libsodium-sys = "0.2"
shell-escape = "0.1"
keyring = "3.2"
zeroize = { version = "1.8", features = ["derive"] }
directories = "5.0"
rpassword = "7.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
subtle = "2.5"
once_cell = "1.20"
dirs = "5.0"
ctrlc = "3.4"
serde_json = "1.0"
fuser = { version = "0.14", optional = true }
parking_lot = { version = "0.12", optional = true }
winfsp = { version = "0.12", optional = true }
widestring = { version = "1.1", optional = true }
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winbase", "winnt"], optional = true }
similar = "2.3"
aho-corasick = "1.1"
thiserror = "1.0"
libc = "0.2.177"
walkdir = "2.4"
globset = "0.4"
rs9p = { package = "rust-9p", path = "vendor/rust-9p", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["fs"], optional = true }
async-trait = { version = "0.1", optional = true }
nix = { version = "0.26", optional = true }

# ----------------------------------------------------------------------
# Hybrid post-quantum KEM deps (feature = "hybrid", default OFF).
# trelis is experimental / unaudited upstream — pin by SHA, never branch.
# Pinned commit: 5374dff482ba94a94695794b5e4554f908eb0d4d (2026-04-24).
# See .planning/phases/02-hybrid-suite/02-CONTEXT.md for rationale.
# ----------------------------------------------------------------------
trelis-hybrid = { git = "https://github.com/dspearson/trelis", rev = "5374dff482ba94a94695794b5e4554f908eb0d4d", optional = true }
trelis-primitives = { git = "https://github.com/dspearson/trelis", rev = "5374dff482ba94a94695794b5e4554f908eb0d4d", optional = true }
blake3 = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3.21.0"
proptest = "1.5"
criterion = "0.5"
serial_test = "3.0"

[[bench]]
name = "marker_inference"
harness = false

[[bench]]
name = "project_ops"
harness = false

[[bench]]
name = "marker_processing"
harness = false

[[bench]]
name = "fuse_read_latency"
harness = false
